--- a/ja/org-mode-news.org
+++ b/ja/org-mode-news.org
@@ -14,6 +14,7 @@
   #+ATTR_HTML: style="float:right;"
   [[http://mobileorg.ncogni.to/][http://mobileorg.ncogni.to/images/screenshot-browse.png]]
 
+- <2012-08-24> バージョン 7.9 を公開
 - <2012-05-25> バージョン 7.8.11 を公開（バグフィックス）
 - <2012-05-16> バージョン 7.8.10 を公開（バグフィックス）
 - <2012-04-11> バージョン 7.8.09 を公開（バグフィックス）
